# sample-go-bzl-ch

./: .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE  docker-compose.yml  go_deps.bzl  main.go
cmd/: BUILD.bazel  go.mod  go.sum  main.go  pong.go  pong_test.go  server.go
querier/: go.mod
router/: BUILD.bazel  go.mod  main.go  pong.go  pong_test.go
