load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/vucong2409/sample-go-bzl-ch
gazelle(
    name = "gazelle",
)

# Need this command to update repository covered by Go workspace
# Ref: https://github.com/bazelbuild/bazel-gazelle/issues/1720
gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.work",
        "-to_macro=go_deps.bzl%go_deps",
        "-prune=True",
    ],
    command = "update-repos",
)

go_library(
    name = "sample-go-bzl-ch_lib",
    srcs = ["main.go"],
    importpath = "github.com/vucong2409/sample-go-bzl-ch",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "sample-go-bzl-ch",
    embed = [":sample-go-bzl-ch_lib"],
    visibility = ["//visibility:public"],
)
