load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/vucong2409/sample-go-bzl-ch
gazelle(
    name = "gazelle",
)

go_library(
    name = "sample-go-bzl-ch_lib",
    srcs = ["main.go"],
    importpath = "github.com/vucong2409/sample-go-bzl-ch",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "sample-go-bzl-ch",
    embed = [":sample-go-bzl-ch_lib"],
    visibility = ["//visibility:public"],
)
