# Module init
module(name = "sample_go_bzl_ch")

# Add Bazel dependencies
bazel_dep(name = "rules_go", version = "0.47.1")
bazel_dep(name = "gazelle", version = "0.31.0")

# Override gazelle deps with un-released version, which had Go Workspace native support.
git_override(
  module_name = "gazelle",
  remote = "https://github.com/bazelbuild/bazel-gazelle",
  commit = "1541133"
)

# Import extension
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# Pin Go SDK version
go_sdk.download(version = "1.22.3")
go_sdk.host()

# Register Go dependencies
go_deps.from_file(go_work = "//:go.work")
use_repo(
  go_deps,
  "com_github_spf13_cobra",
  "com_github_gorilla_mux"
)

# Setup private repo
go_deps.config(
  go_env = {
    "GOPRIVATE": "example.com"
  }
)
