load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "main.go",
        "pong.go",
        "server.go",
    ],
    importpath = "github.com/vucong2409/sample-go-bzl-ch/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//router",
        "@com_github_spf13_cobra//:cobra",
    ],
)
