load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "main.go",
        "pong.go",
        "server.go",
    ],
    importpath = "github.com/vucong2409/sample-go-bzl-ch/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//router",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_vucong2409_sample_private_go_mod//:sample-private-go-mod",
    ],
)

go_test(
    name = "cmd_test",
    srcs = ["pong_test.go"],
)
