load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "router",
    srcs = [
        "main.go",
        "pong.go",
    ],
    importpath = "github.com/vucong2409/sample-go-bzl-ch/router",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gorilla_mux//:mux"],
)
